# audilets

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
lib/dr/: CMakeLists.txt  README
lib/kissfft/: CMakeLists.txt  LICENSE  README
lib/qcustomplot/: CMakeLists.txt  README
lib/readerwriterqueue/: CMakeLists.txt  README  readerwritercircularbuffer.h
lib/rtaudio/: CMakeLists.txt  LICENSE  README
lib/rtmidi/: CMakeLists.txt  LICENSE  README
src/Audilets/: CMakeLists.txt
src/Audilets/DSP/: Codec.h  Convert.h  FFT.cpp  FFT.h  FIFO.h  Math.h  Monitor.cpp  Monitor.h  Ringbuffer.h  STFT.cpp  STFT.h  SineWave.cpp  SineWave.h  Window.cpp  Window.h
src/Audilets/DSP/Algorithms/: BernseeVocoder.cpp  BernseeVocoder.h  SinglePitchShift.cpp  SinglePitchShift.h
src/Audilets/DSP/Filters/: ChamberlinFilter.cpp  ChamberlinFilter.h
src/Audilets/GUI/: MultiPlotWindow.cpp  MultiPlotWindow.h
src/Audilets/IO/: AudioSink.cpp  AudioSink.h  AudioSource.cpp  AudioSource.h  Sink.h  Source.h
src/Audilets/UI/: MultiPlotWindow.cpp  MultiPlotWindow.h  QPlotWidget.h
src/Monitor/: CMakeLists.txt  Monitor.cpp
src/Probe/: CMakeLists.txt  Probe.cpp
src/Prototyping/: chamberlin.py
src/Sandbox/: CMakeLists.txt  Sandbox.cpp
